microservices/authorization/authorization-k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: authorization-service-app
  template:
    metadata:
      labels:
        name: authorization-service-app
    spec:
      containers:
      - name: application
        image: rendize/authorization-service
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: account-configmap-volume
          mountPath: /etc/config
          readOnly: true
      volumes:
        - name: account-configmap-volume
          configMap:
            name: account-configmap


---
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
spec:
  type: ClusterIP
  selector:
    name: authorization-service-app
  ports:
  - port: 80
    targetPort: 3000
