microservices/authorization/authorization-ingress-minion.yml
# must be applied to the "authorization" namespace
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: authorization-ingress-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api.rendize.com
    http:
      paths:
      - path: /authorization/.*
        backend:
          serviceName: authorization-service
          servicePort: 80
